--- a/contacts.html
+++ b/contacts.html
@@ -99,6 +99,7 @@
         <p>Телефон Менеджера: +7 (920) 334-23-89</p>
         <p>Email: info@44region-auto.ru</p>
         <p>Адрес: Костромаская обл. г.Кострома. ул.Гагарина 2Б</p>
+		<p>Режим работы: с 8:30 до 18:00 - без выходных!</p>
     </section>
     
     <footer>
